CardsGrid  scroll changed + fixed jumping bug on popup open

--- a/styles/AboutList.module.scss
+++ b/styles/AboutList.module.scss
@@ -18,7 +18,7 @@
     }
 
     .showText {
-      max-height: 100px;
+      max-height: 150px;
     }
 
     button {
