--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -123,7 +123,7 @@ $page-padding-left: 17%;
   }
 
   .sectionWhatWeDo {
-    margin-bottom: 700px;
+    margin-bottom: 200px;
     padding-top: 100px;
     z-index: 3;
 
@@ -476,7 +476,6 @@ $page-padding-left: 17%;
     }
 
     .sectionWhatWeDo {
-      margin-bottom: 600px;
 
       h1 {
         margin-bottom: 400px;
@@ -593,7 +592,6 @@ $page-padding-left: 17%;
     }
 
     .sectionWhatWeDo {
-      margin-bottom: 550px;
 
       h1 {
         margin-bottom: 320px;
@@ -621,9 +619,15 @@ $page-padding-left: 17%;
     padding-top: 40px;
 
     .textCycleWrapper {
+      top: -420px;
+      left: -380px;
 
       &:nth-of-type(1) {
-        top: 1100px;
+        top: 1250px;
+      }
+
+      .textCycle {
+        height: 1500px;
       }
     }
 
@@ -772,7 +776,6 @@ $page-padding-left: 17%;
     }
 
     .sectionWhatWeDo {
-      margin-bottom: 460px;
     }
 
     .sectionOurWork {
