--- a/styles/Menus.module.scss
+++ b/styles/Menus.module.scss
@@ -88,6 +88,7 @@
       background-color: rgba(colors.$clr-background, .84);
       border-right: 1px solid white;
       padding-bottom: 40px;
+      width: max-content;
 
       .logo {
         width: 100%;
